fixed some layout issues

--- a/css/test.css
+++ b/css/test.css
@@ -752,16 +752,16 @@ margin-left: 0;
     grid-column: 1 / 1;
     grid-row: 4 / 4;
     margin-top: 2em;
-    height: 27vh !important;
-    width: 93vw !important;
+    height: 27vh;
+    width: 93vw;
   }
 
   .right-col {
     grid-column: 1 / 2;
     grid-row: 5 / 5;
     margin-top: 3.5em;
-    height: 27vh !important;
-    width: 93vw !important;
+    height: 27vh;
+    width: 93vw;
   }
 
 
@@ -978,12 +978,16 @@ margin-left: 0;
   }
 
 
-
   .inner-grid {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(2, minmax(650px, 1fr));
     grid-template-rows: 75px 100px repeat(4, minmax(200px, 1fr));
   }
+
+
+
+
+
 
   #dashboardh2{
     text-align: left;
@@ -991,10 +995,12 @@ margin-left: 0;
   }
 
   .search {
+    grid-area: search;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    grid-column: 1 / 2;
+    grid-column: 1 / 3;
+    grid-row: 1 / 1;
     margin-top: 1em;
     margin-right: 1.1em;
   }
@@ -1020,12 +1026,13 @@ margin-left: 0;
   }
 
   .alert {
+    grid-area: alert;
     grid-column: 1 / 3;
     grid-row: 2 / 2;
     display: flex;
     justify-content: space-between;
     height: 40%;
-    width: 60%;
+    width: 73%;
     max-width: 1000px;
     margin-left: 1.5em;
     margin-right: 1em;
@@ -1051,7 +1058,8 @@ margin-left: 0;
 
 
   .traffic {
-    grid-column: 1 / 2;
+    grid-area: traffic;
+    grid-column: 1 / 3;
     grid-row: 3;
   }
 
@@ -1083,37 +1091,46 @@ margin-left: 0;
 
   .chart-container{
     grid-column: 1 / 2;
-    height: 29vh !important;
-    width: 87vw !important;
-    margin-left: 2em;
+    height: 42vh !important;
+    width: 92vw !important;
+    margin-left: 0;
   }
-
-
-
 
   .left-col h2 {
     margin-left: 1.3em;
   }
 
-  .left-col {
-    height: 40vh !important;
-    width: 50vw !important;
+
+  .left-col {
+    grid-area: leftCol;
+    grid-column: 1 / 1;
+    grid-row: 4 / 4;
+    margin-top: 3em;
+    height: 50vh !important;
+    width: 45vw !important;
+    margin-top: 0;
   }
 
+
   #bar-chart {
-    margin-left: 2em;
+    margin-left: 0;
     border: 1px solid grey;
   }
 
 
 
   .right-col {
-    grid-column: 3 / 3;
-    margin: auto;
+    grid-area: rightCol;
+    grid-column: 2 / 3;
+    grid-row: 4 / 4;
+    height: 50vh !important;
+    width: 46vw !important;
+    margin-top: 0;
   }
 
   #pie-chart{
-    margin-bottom: 1em;
+    margin-right: 0;
+    margin-bottom: 0;
     border: 1px solid grey;
   }
 
@@ -1126,10 +1143,12 @@ margin-left: 0;
   }
 
   .widget {
+    grid-area: widget;
     margin-top: 3em;
-    grid-column: 1 / 4;
+    grid-column: 1 / 3;
     grid-row: 5 / 5;
     display: flex;
+    flex-direction: row;
     justify-content: space-between;
   }
 
@@ -1248,24 +1267,26 @@ margin-left: 0;
 
 
   .members-container {
+    grid-area: member;
     display: flex;
-    margin-left: 2em;
+    margin-left: 0;
+    flex-direction: column;
+    border: 1px solid grey;
+    grid-column: 1 / 2;
+    grid-row: 6 / 6;
+    width: 100%;
+  }
+
+  .activity-container {
+    grid-area: activity;
+    display: flex;
+    margin-left: 0;
     flex-direction: column;
     border: 1px solid grey;
     grid-column: 2 / 2;
     grid-row: 6 / 6;
-    width: 600px;
-  }
-
-  .activity-container {
-    display: flex;
-    margin-left: 2em;
-    flex-direction: column;
-    border: 1px solid grey;
-    grid-column: 3 / 3;
-    grid-row: 6 / 6;
-    width: 600px;
-    height: 382.25px;
+    width: 100%;
+    height: 100%;
 
   }
 
@@ -1277,6 +1298,7 @@ margin-left: 0;
     padding-bottom: 1em;
     border-bottom: 1px solid grey;
     font-size: .9em;
+    width: 100%;
   }
 
   .flex-test img {
@@ -1288,6 +1310,7 @@ margin-left: 0;
 
   .flex-test p {
     margin-right: 1em;
+    font-size: .9em;
   }
 
   .flex-test a {
@@ -1301,6 +1324,7 @@ margin-left: 0;
   }
 
   .input-container {
+    grid-area: input;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -1360,6 +1384,7 @@ margin-left: 0;
 
 
   .settings-container {
+    grid-area: settings;
     display: flex;
     flex-direction: column;
     padding-left: 2em;
